--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -14,8 +14,7 @@
     "\n",
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
-    "\n",
-    "# from config import db_password\n",
+    "from config import db_password\n",
     "\n",
     "import time"
    ]
@@ -298,7 +297,23 @@
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n",
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
     "    \n",
-    "    return wiki_movies_df, movies_with_ratings_df, movies_df\n"
+    "    #return wiki_movies_df, movies_with_ratings_df, movies_df\n",
+    "    \n",
+    "    db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
+    "    engine = create_engine(db_string)\n",
+    "    movies_df.to_sql(name='movies', con=engine, if_exits='replace')\n",
+    "    \n",
+    "    rows_imported = 0\n",
+    "    # get the start_time from time.time()\n",
+    "    start_time = time.time()\n",
+    "    for data in pd.read_csv(f'{file_dir}/ratings.csv', chunksize=1000000):\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')\n",
+    "    "
    ]
   },
   {
